--- a/client/Lykke.Service.Dwh.Client/Lykke.Service.Dwh.Client.csproj
+++ b/client/Lykke.Service.Dwh.Client/Lykke.Service.Dwh.Client.csproj
@@ -23,7 +23,8 @@
     <None Remove="Lykke.Service.Dwh.Client.xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Lykke.Common" Version="7.0.1" />
-    <PackageReference Include="Refit" Version="4.6.16" />
+    <PackageReference Include="Lykke.HttpClientGenerator" Version="2.2.0" />
+    <PackageReference Include="Lykke.SettingsReader" Version="4.0.1" />
+    <PackageReference Include="Refit" Version="4.6.30" />
   </ItemGroup>
 </Project>
